# robert

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile
app/: CMakeLists.txt  main.c
app/arm/: CMakeLists.txt  main.c
app/atmega88pa/: CMakeLists.txt  main.c
app/avr/: CMakeLists.txt  main.c
app/stm32f303x8/: CMakeLists.txt  main.c
cmake/: avr-gcc.cmake  dependencies.cmake
decision-log/: 2024-12-21--to-hal-or-not-to-hal.md  2025-01-10--bare-metal-implementation.md  2025-01-18--pins-layout.md  2025-01-21--object-vs-singleton.md  2025-01-22--SPI-implementation-for-dualshock2.md
include/: robert.h
include/drivers/: dualshock2.h
include/motion/: motion.h
include/vehicle/: vehicle.h  vehicle_command_port.h  vehicle_motion_port.h
src/: CMakeLists.txt  comm.c  comm.h  comm_ds2.c  comm_irp.c  control.h  control_dualshock2.c  control_infrared_pilot.c  ds2.c  ds2.h  dualshock2.c  dualshock2.h  infrared_pilot.c  infrared_pilot.h  irp.c  irp.h  irp_avrhal.c  l293.c  l293.h  main.c  motion.h  motion_l293.c  mov.c  mov.h  mov_l293.c
src/control/: CMakeLists.txt  control.c  control_infrared_pilot.c
src/core/: CMakeLists.txt
src/core/command/: CMakeLists.txt  command.h  command_dualshock2.c  command_stub.c
src/core/motion/: CMakeLists.txt  motion.h  motion_l293.c
src/core/vehicle/: CMakeLists.txt  vehicle.c  vehicle.h
src/drivers/: CMakeLists.txt
src/drivers/arm/: CMakeLists.txt  command_dualshock2.c  motion_l293.c
src/drivers/arm/peripherials/: timer1.c
src/drivers/avr/: CMakeLists.txt  command_dualshock2.c  dualshock2.c  motion_l293.c  vehicle_command_dualshock2.c  vehicle_motion_l293.c
src/drivers/peripherials/gpio/: CMakeLists.txt  gpio.h  gpio_atmega88pa.c  gpio_stm32f303x8.c
src/drivers/peripherials/ogpio/: ogpio.c
src/drivers/peripherials/pwm/: CMakeLists.txt  pwm.h  pwm_atmega88pa.c  pwm_stm32f303x8.c
src/drivers/peripherials/spi/: CMakeLists.txt  spi.h  spi_atmega88pa.c  spi_stm32f303x8.c
src/drivers/peripherials/timer/: CMakeLists.txt  timer.h  timer_atmega88pa.c  timer_stm32f303x8.c
src/drivers/utils/dualshock2/: CMakeLists.txt  dualshock2.c  dualshock2.h
src/dualshock2/: CMakeLists.txt  dualshock2.c
src/infrared_pilot/: CMakeLists.txt  infrared_pilot.c
src/l293/: CMakeLists.txt  l293.c  l293.h
src/motion/: CMakeLists.txt  motion_l293.c
src/vehicle/: CMakeLists.txt  vehicle.c
test/: CMakeLists.txt  comm_ds2_test.c  comm_irp_test.c  comm_test.c  control_dualshock2_test.c  control_infrared_pilot_test.c  infrared_pilot_test.c  irp_test.c  unity_config.h
test-old/atmega88pa-stub/include/avr/: stub.h
test-old/atmega88pa-stub/lib/: CMakeLists.txt
test-old/drivers/avr/: dualshock2_test.c  motion_l293_test.c
test-old/vehicle/: CMakeLists.txt
test/atmega88pa-stub/include/avr/: interrupt.h  io.h
test/atmega88pa-stub/lib/: CMakeLists.txt  atmega88pa-stub.c
test/control/: CMakeLists.txt  control.c
test/drivers/: CMakeLists.txt
test/drivers/avr/: CMakeLists.txt  dualshock2_test.c  motion_l293_test.c  vehicle_motion_l293_test.c
test/drivers/peripherals/: CMakeLists.txt
test/drivers/peripherals/gpio/: CMakeLists.txt  gpio_atmega88pa_test.c
test/drivers/peripherals/pwm/: CMakeLists.txt  pwm_atmega88pa_test.c
test/drivers/peripherals/spi/: CMakeLists.txt  spi_atmega88pa_test.c
test/drivers/peripherals/timer/: CMakeLists.txt  timer_atmega88pa_test.c
test/drivers/utils/dualshock2/: CMakeLists.txt  dualshock2_test.c
test/dualshock2/: CMakeLists.txt  dualshock2.c
test/include/avrhal/: gpio.h  t1int.h  t1nrm.h
test/include/drivers/: command_mock.h  motion_mock.h
test/include/vehicle/: vehicle_command_mock.h  vehicle_motion_mock.h
test/mocks/gpio/: CMakeLists.txt  gpio_mock.c  gpio_mock.h
test/motion/: CMakeLists.txt  motion_l293.c
test/simple/: CMakeLists.txt  simple.c
test/vehicle/: CMakeLists.txt  command_mock.c  motion_mock.c  vehicle_command_mock.c  vehicle_motion_mock.c  vehicle_test.c
